# hack-of-life

./: ChangeLog  Makefile.am  Makefile.in  README  config.h.in  configure  configure.ac  hackoflife
src/: Makefile.am  Makefile.in  game.c  game.h  graphics.c  graphics.h  network.c  network.h  random.c  random.h  world.c  world.h
windows/: Makefile  config.h  curses.h  panel.h
